# trilobyte-c

./: CMakeLists.txt
mydef/: CMakeLists.txt
mydef/include/: mydef.h
myhello/: CMakeLists.txt
myhello/include/: myhello.h
myhello/src/: myhello.c
mymath/: CMakeLists.txt
mymath/src/: mymath.c
src/: main.c
